# batch-ida

./: .gitignore  LICENSE  README.md  example.py  example_on_linux.py  example_script.py  pyproject.toml
batch_ida/: __init__.py  bi_analyzer.py  bi_bindiff.py  bi_dircmp.py  bi_ida.py  bi_singleanalyzer.py
tests/: __init__.py
