[tool.poetry]
name = "batch-ida"
version = "0.1.3"
description = "A python library for comparing folders and generate ida & bindiff files in batch mode."
authors = ["ZhengZH <41407837+chnzzh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "batch_ida"}]
repository = "https://github.com/chnzzh/batch-ida"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chnzzh/batch-ida/issues"